<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    tools:context="com.momentu.momentuandroid.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="Sign up to see photos and videos\nin a certain location"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/createAnAccountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="Create an Account"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="casual"
                                android:text="Username:"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/usernameInput"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="casual"
                                android:inputType="textPersonName"
                                android:selectAllOnFocus="true"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="casual"
                                android:text="Password:"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/passwordInput"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="casual"
                                android:inputType="textPassword"
                                android:selectAllOnFocus="false"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/firstName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="casual"
                                android:text="First Name:"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/firstNameInput"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="casual"
                                android:inputType="textPersonName"
                                android:selectAllOnFocus="false"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/lastName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="casual"
                                android:text="Last Name:"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/lastNameInput"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="casual"
                                android:inputType="textPersonName"
                                android:selectAllOnFocus="false"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="casual"
                                android:text="Gender"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="left"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/maleRadioButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="casual"
                                    android:onClick="onClickRadioButton"
                                    android:text="Male"
                                    android:textColor="@android:color/white"
                                    android:textStyle="bold" />

                                <RadioButton
                                    android:id="@+id/femaleRadioButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="casual"
                                    android:onClick="onClickRadioButton"
                                    android:text="Female"
                                    android:textColor="@android:color/white"
                                    android:textStyle="bold" />
                            </RadioGroup>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="casual"
                                android:text="Email:"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/emailInput"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="casual"
                                android:inputType="textEmailAddress"
                                android:selectAllOnFocus="false"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </TableRow>

                    </TableLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/signUpButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:onClick="onClickSignUp"
                        android:text="Sign Up" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
